Add endpoints for creating and getting ContractDefinitions
