# docs/swagger/swagger.yaml
@@ -843,6 +843,136 @@ paths:
           description: Success
         default:
           description: ""
+  /namespaces/{ns}/contracts/definitions:
+    post:
+      description: 'TODO: Description'
+      operationId: postNewContractDefinition
+      parameters:
+      - description: 'TODO: Description'
+        in: path
+        name: ns
+        required: true
+        schema:
+          example: default
+          type: string
+      - description: When true the HTTP request blocks until the message is confirmed
+        in: query
+        name: confirm
+        schema:
+          example: "true"
+          type: string
+      - description: Server-side request timeout (millseconds, or set a custom suffix
+          like 10s)
+        in: header
+        name: Request-Timeout
+        schema:
+          default: 120s
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                ffabi:
+                  properties:
+                    events:
+                      items: {}
+                      type: array
+                    methods:
+                      items: {}
+                      type: array
+                  type: object
+                name:
+                  type: string
+                onChainLocation:
+                  type: string
+                version:
+                  type: string
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                properties:
+                  ffabi:
+                    properties:
+                      events:
+                        items: {}
+                        type: array
+                      methods:
+                        items: {}
+                        type: array
+                    type: object
+                  id: {}
+                  message: {}
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                  onChainLocation:
+                    type: string
+                  version:
+                    type: string
+                type: object
+          description: Success
+        default:
+          description: ""
+  /namespaces/{ns}/contracts/definitions/{definitionId}:
+    get:
+      description: 'TODO: Description'
+      operationId: getNewContractDefinition
+      parameters:
+      - description: 'TODO: Description'
+        in: path
+        name: ns
+        required: true
+        schema:
+          example: default
+          type: string
+      - description: 'TODO: Description'
+        in: path
+        name: definitionId
+        required: true
+        schema:
+          example: default
+          type: string
+      - description: Server-side request timeout (millseconds, or set a custom suffix
+          like 10s)
+        in: header
+        name: Request-Timeout
+        schema:
+          default: 120s
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                properties:
+                  ffabi:
+                    properties:
+                      events:
+                        items: {}
+                        type: array
+                      methods:
+                        items: {}
+                        type: array
+                    type: object
+                  id: {}
+                  message: {}
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                  onChainLocation:
+                    type: string
+                  version:
+                    type: string
+                type: object
+          description: Success
+        default:
+          description: ""
   /namespaces/{ns}/data:
     get:
       description: 'TODO: Description'
