# internal/apiserver/routes.go
@@ -97,4 +97,7 @@ var routes = []*oapispec.Route{
 	postTokenTransfer,
 	postTokenTransferByType,
 	getTokenConnectors,
+
+	postNewContractDefinition,
+	getContractDefinition,
 }
